# maelstrom

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
src/: board.c  main.c
